# octagon

./: test.csv  test.ods
arduino_src/: nab_checkencoder.ino  nab_radio.ino  nb_finalenoder_test.ino
arduino_src/ArduIMU328_V3/: ArduIMU328_V3.ino  Compass.ino  MPU6000.ino
octave/: load_magxyz.m
src/ekf_example/: CMakeLists.txt  package.xml
src/ekf_example/include/ekf_example/: UnicycleEkf.h
src/ekf_example/launch/: ekf_example.launch  ekf_example.launch~
src/ekf_example/src/: UnicycleEkf.cpp  ekf_example_node.cpp  ekf_example_node.cpp~
src/ekf_example/yaml/: ekf_params.yaml
src/gps_example/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/gps_example/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/gps_example/catkin_generated/installspace/: gps_example.pc  gps_exampleConfig.cmake
src/gps_example/catkin_generated/stamps/gps_example/: package.xml.stamp
src/gps_example/devel/: .catkin  .rosinstall  setup.sh
src/gps_example/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
src/gps_example/devel/lib/gps_example/: gps_example_node  sensor_integration_node
src/gps_example/devel/lib/pkgconfig/: gps_example.pc
src/gps_example/devel/share/gps_example/cmake/: gps_exampleConfig.cmake
src/gps_example/gtest/: CTestTestfile.cmake  Makefile
src/gps_example/include/gps_example/: GpsConversion.h
src/gps_example/launch/: gps_example.launch  gps_example.launch~
src/gps_example/rviz/: rviz_config.rviz
src/gps_example/src/: GpsConversion.cpp  gps_example_node.cpp  gps_example_node.cpp~  sensor_integration_node.cpp
src/gps_navigation/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/gps_navigation/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/gps_navigation/catkin_generated/installspace/: _setup_util.py  gps_navigation.pc  gps_navigationConfig.cmake
src/gps_navigation/catkin_generated/stamps/gps_navigation/: package.xml.stamp
src/gps_navigation/devel/: .catkin  .rosinstall  setup.sh
src/gps_navigation/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
src/gps_navigation/devel/lib/gps_navigation/: navigation_node
src/gps_navigation/devel/lib/pkgconfig/: gps_navigation.pc
src/gps_navigation/devel/share/gps_navigation/cmake/: gps_navigationConfig.cmake
src/gps_navigation/gtest/: CTestTestfile.cmake  Makefile
src/gps_navigation/include/gps_navigation/: GpsConversion.h
src/gps_navigation/launch/: gps_navigation.launch  gps_navigation.launch~
src/gps_navigation/rviz/: rviz_config.rviz
src/gps_navigation/src/: GpsConversion.cpp  GpsConversion.cpp~  gps_navigation.cpp
src/gps_navigation/test_results/: gps_nav test service.txt  gps_nav test service.txt~
(+72 files in other folders)
