<?xml version="1.0"?>
<package>
  <name>ekf_example</name>
  <version>0.0.0</version>
  <description>The ekf_example package</description>
  <maintainer email="micho@todo.todo">micho</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gps_example</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gps_example</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
